Bug #594 : Database migration is broken (ASSIGNED, P2) http://www.escidoc-project.de/issueManagement/show_bug.cgi?id=594 updated documentation (readme.txt)